# vivaz-api

./: Cargo.toml  Dockerfile  build.rs
proto/: cachebuffer.proto  entrybuffer.proto  pubeventbuffer.proto  subeventbuffer.proto
src/: main.rs
src/adapters/events/configs/: reader_cfg.rs
src/domain/: app.rs
