[package]
name = "vivaz-api"
version = "0.1.0"
authors = ["rogerio.ferreira@ibm.com <Rogerio Ferreira>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
lazy_static = "1.4.0"
rdkafka = "0.26.0"
carboxyl = "0.2.1"
failsafe = "1.0.0"