[package]
name = "vivaz-api"
version = "0.1.0"
authors = ["rogerio.ferreira@ibm.com <Rogerio Ferreira>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "vivaz-api-app"
path = "src/domain/app.rs"

[dependencies]
tonic = "0.4"
prost = "0.7"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"]}
tokio-stream = "0.1"
futures = { version = "0.3", default-features = false, features = ["alloc"] }

async-stream = "0.1"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
rand = "0.7"

actix-web = "3"
lazy_static = "1.4.0"
rdkafka = "0.26.0"
failsafe = "1.0.0"
config="0.11.0"

log="0.4.14"
regex = "1"
redis={ version = "0.20.0",  default-features = false, features = ["cluster", "connection-manager", "tokio-comp"] }
postgres = "0.19.1"
tokio-postgres = "0.7.1"

[build-dependencies]
tonic-build = "0.4"
